--- a/collage/wd/wd_9.html
+++ b/collage/wd/wd_9.html
@@ -3,14 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Exe - 9</title>
     <style>
       body {
-        background-image: url('beluga.jpeg');
+        display: flex;
+        background-image: url('forest.jpg');
         background-repeat: no-repeat;
         background-size: cover;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        margin: 0;
+      }
+      .element {
+        background-color: skyblue;
+        border-radius: 20px;
+        font-size: 29px;
+        height: 200px;
+        width: 200px;
+        text-align: center;
+        border: 2px solid;
+      }
+      a {
+        text-decoration: none;
+      }
+      a:link {
+        color: blue;
+        font-weight: bold;
+      }
+      a:visited {
+        color: purple;
+      }
+      a:hover {
+        color: red;
+      }
+
+      a:active {
+        color: yellow;
       }
     </style>
   </head>
-  <body></body>
+  <body>
+    <div class="element">
+      <h4>Hyper links</h4>
+      <p>
+        <a href="https://google.com">Google</a><br />
+        <a href="https://w3schools.com">Google</a>
+      </p>
+    </div>
+  </body>
 </html>
