wd last commit?

--- a/collage/wd/wd_10.html
+++ b/collage/wd/wd_10.html
@@ -10,7 +10,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        
         background-color: #f0f0f0;
       }
       .resume {
@@ -58,7 +57,7 @@
         <div class="content">
             <h2>CONTACT</h2>
             <p>9384350120</p>
-          <p><a href="mailto:yugesh2@gmail.com">yugesh2@gmail.com</a></p>
+          <p><a href="mailto:yugesh2@gmail.com">a.yugesh2@gmail.com</a></p>
           <p>
             <a
               href="https://www.linkedin.com/in/yugesh-a-120541321"
