--- a/collage/wd/wd_7.html
+++ b/collage/wd/wd_7.html
@@ -21,11 +21,11 @@
         <th>Marks</th>
       </tr>
       <tr>
-        <td>Prasaanth</td>
+        <td>Yugesh</td>
         <td>90</td>
       </tr>
       <tr>
-        <td>Yugesh</td>
+        <td>Nivi</td>
         <td>81</td>
       </tr>
       <tr>
