--- a/collage/wd/wd_7.html
+++ b/collage/wd/wd_7.html
@@ -21,17 +21,16 @@
         <th>Marks</th>
       </tr>
       <tr>
-        <td>Yugesh</td>
+        <td>Bharathi</td>
         <td>90</td>
       </tr>
       <tr>
-        <td>Nivi</td>
+        <td>Hari</td>
         <td>81</td>
       </tr>
       <tr>
-        <td>Gayathri</td>
+        <td>Ryan Gosling</td>
         <td>80</td>
-        
       </tr>
     </table>
   </body>
