--- a/collage/wd/wd_10.html
+++ b/collage/wd/wd_10.html
@@ -151,7 +151,7 @@
       <div class="section">
         <div class="content">
           <h2>VOLUNTEER EXPERIENCE</h2>
-          <p><strong>TN Startup 2 – Days Event</strong></p>
+          <p><strong>TN Startup 2 - Days Event</strong></p>
           <p>
             Skilled in teamwork, organization, and adaptable to dynamic
             settings.
