--- a/collage/wd/wd_9.html
+++ b/collage/wd/wd_9.html
@@ -9,24 +9,14 @@
         display: flex;
         background-image: url('forest.jpg');
         background-repeat: no-repeat;
-        background-size: cover;
-        align-items: center;
         justify-content: center;
-        height: 100vh;
-        margin: 0;
       }
       .element {
         background-color: skyblue;
-        border-radius: 20px;
-        font-size: 29px;
-        height: 200px;
         width: 200px;
-        text-align: center;
         border: 2px solid;
       }
-      a {
-        text-decoration: none;
-      }
+      
       a:link {
         color: blue;
         font-weight: bold;
@@ -48,7 +38,7 @@
       <h4>Hyper links</h4>
       <p>
         <a href="https://google.com">Google</a><br />
-        <a href="https://w3schools.com">Google</a>
+        <a href="https://w3schools.com">w3schools</a>
       </p>
     </div>
   </body>
